src/test/errors/loopInvariantErr.hhl
/*
    A test case for errors caused by a loops invariant which may not be preserved.
    Output:
        Verification failed
        [WhileLoop] The following invariant might not be preserved:
        forall <_s: State> :: ((!(<_s>)) || ((_s[i]) == (0)))
        Metadata:
        - LoopRule: syncRule
        - QuantifiersRemoved: 0

        [Method] The following post condition might not hold:
        exists <_s: State> :: ((<_s>) && ((_s[out]) == (2)))
*/

method loopInvariantErr() returns (out: Int)
    requires exists <_s> :: true
    ensures exists <_s> :: _s[out] == 2
{
    var i: Int
    i := 0

    while (i < 1)
        invariant forall <_s> :: _s[i] == 0
    {
        i := i + 1
    }

    out := 2
}

